# front-end

./: .gitignore  package-lock.json  package.json
deepshopping-main/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_deepsearch.ipynb  user_info.ipynb
deepshopping-main/api/: __init__.py  main.py  requirements.txt
deepshopping-main/frontend/: package-lock.json  package.json
deepshopping-main/frontend/public/: index.html  manifest.json
deepshopping-main/frontend/src/: App.js
deepshopping-main/frontend/src/components/: Homef.js  RecommendationForm.js
deepshopping-main/toil/: __init__.py  model_config.py  utils.py
deepshopping-main/toil/core/: agent.py  node.py  prompt.py
deepshopping-main/toil/personal color predict/: __init__.py  bodyshape.py  personal_color_model.h5  scaler.pkl  skincolor.py
deepshopping-main/toil/tools/: __init__.py  base.py  mixins.py  search.py  shopping.py  subgraphs.py  url.py  utils.py
