[project]
name = "toil"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "chardet==5.2.0",
    "google-api-python-client==2.137.0",
    "langchain==0.3.20",
    "langchain-community==0.3.19",
    "langchain-core==0.3.45",
    "langchain-fireworks==0.2.7",
    "langchain-google-genai==2.1.0",
    "langchain-openai==0.3.8",
    "langgraph==0.3.11",
    "markdownify==0.13.1",
    "pandas==2.2.0",
    "paramiko==3.4.0",
    "pip>=25.0.1",
    "pydantic==2.10.6",
    "pymupdf==1.24.13",
    "pytube==15.0.0",
    "readabilipy==0.2.0",
    "setuptools>=78.1.0",
    "transformers==4.48.2",
    "youtube-transcript-api==0.6.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "toil*"]
exclude = ["frontend*"]

[dependency-groups]
dev = [
    "black==24.8.0",
    "ipykernel==6.29.5",
    "isort==5.13.1",
    "pre-commit==3.7.1",
]
